# pajama-hive

./: .env.example  .gitignore  .vercelignore  AGENT.md  CLAUDE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  swarm-deep-research-report.md  vercel.json
.github/workflows/: ci.yml
assets/gep/: candidates.jsonl
crates/hive-cli/: Cargo.toml
crates/hive-cli/src/: config.rs  main.rs
crates/hive-cli/src/agent/: cc.rs  cx.rs  executor.rs  generic.rs  mod.rs
crates/hive-cli/src/auth/: mod.rs  oauth.rs
crates/hive-cli/src/pty/: mod.rs  session.rs
crates/hive-cli/src/tui/: app.rs  events.rs  mod.rs  ui.rs
crates/hive-cli/src/ws/: client.rs  mod.rs
docs/: ROADMAP.md  coze-parity-diff.json  feature-parity.md  iteration-report.json
logs/: status_innovate.json
npm/hive/: README.md  package.json
npm/hive-darwin-arm64/: package.json
npm/hive-darwin-x64/: package.json
npm/hive-linux-x64/: package.json
npm/hive-win32-x64/: package.json
scripts/: coze-parity-diff.ts  deep-parity-analysis.ts  e2e-live-test.ts  e2e-smoke-test.ts  feature-tab-tests.ts  post-iteration-analysis.ts  scaffold-domain.ts  setup-email.md  ux-coverage-analyzer.ts
