[package]
name = "hive-cli"
version = "0.1.0"
edition = "2021"
description = "Pajama Hive CLI - Agent orchestration TUI"
license = "MIT"
repository = "https://github.com/PajamaDot/pajama-hive"

[[bin]]
name = "hive"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# PTY
portable-pty = "0.8"

# Auth
oauth2 = "4"
tiny_http = "0.12"
open = "5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
